src/main/java/org/example/bank/_core/errors/exceptions/Exception400.java
package org.example.bank._core.errors.exceptions;

public class Exception400 extends RuntimeException{

    public Exception400(String msg) {
        super(msg);
    }
}